# Task-Manager

./: .gitignore  Cargo.toml  README.md  tasks.json  tasks2.json
src/: main.rs
src/data/: data_tasks.rs  mod.rs  task.rs
src/errors/: mod.rs
src/handlers/: mod.rs
static/: app.js  create_task.html  delete_task.html  index.html  style.css
