[package]
name = "task_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
allow = "0.1.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
axum-macros = "0.5.0"
full = "0.3.0"
